# rust-playground-0

./: Cargo.toml
src/: main.rs
src/routes/: data.rs
